Fixing Lexxy prompt menu spacing

--- a/app/assets/stylesheets/lexxy.css
+++ b/app/assets/stylesheets/lexxy.css
@@ -293,6 +293,10 @@
 
     max-height: 200px;
     overflow: scroll;
+  
+    &:is(.lexxy-prompt-menu--visible) {
+      padding: var(--lexxy-prompt-padding);
+    }
   }
 
   .lexxy-prompt-menu--visible {
